# netrusting

./: .gitignore  Cargo.toml  Dockerfile  README.md  shell.ps1
rcat/: Cargo.toml  README.md
rcat/certs/: ca-csr.json  server.json
rcat/src/: cli.rs  common.rs  connect.rs  main.rs  serve.rs  stream.rs  tls.rs  udp.rs
rdns/config/: Cargo.toml
rdns/config/src/: lib.rs  txt_config.rs
rdns/core/: Cargo.toml
rdns/core/src/: error.rs  lib.rs  name.rs  record.rs  test.rs
rdns/server/: Cargo.toml
rdns/server/src/: cli.rs  main.rs
