[package]
name = "rcat"
version = "0.1.0"
edition = "2021"
authors = ["Dionysus <dionysus-oss@proton.me>"]

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }
rustls-pemfile = "1.0.1"
tokio = { version = "1.21.2", features = ["full"]  }
tokio-rustls = "0.23.4"
webpki-roots = "0.22.5"
futures = "0.3"